fixed card spacing

--- a/src/webshop/aperta-shop/src/components/Cart/styles.css
+++ b/src/webshop/aperta-shop/src/components/Cart/styles.css
@@ -31,7 +31,6 @@
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    margin-top: 2rem;
 }
 
 .subtotalText {
